lang: updated Greek translation using Weblate
Currently translated at 100.0% (267 of 267 strings)

lang: updated Greek translation using Weblate

Currently translated at 100.0% (212 of 212 strings)

Co-authored-by: Λευτέρης Τ <lefteris592@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/el/
Translate-URL: https://hosted.weblate.org/projects/feeder/f-droid-and-play-store-metadata/el/
Translation: Feeder/Android strings
Translation: Feeder/F-Droid and Play Store metadata

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -264,4 +264,6 @@
     <string name="nostr_feed_description">Άρθρα Nostr από %1$s</string>
     <string name="on">Ενεργό</string>
     <string name="off">Ανενεργό</string>
+    <string name="search_verb">Αναζήτηση</string>
+    <string name="cancel_search">Ακύρωση αναζήτησης</string>
 </resources>
