--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,4 +289,7 @@
   <string name="add_font">Add font…</string>
   <string name="bold">Bold</string>
   <string name="text_settings">Text settings</string>
+  <string name="could_not_add_font">Could not add font</string>
+  <string name="could_not_remove_font">Could not remove font</string>
+  <string name="something_went_wrong">Something went wrong</string>
 </resources>
