lang: updated Portuguese (Portugal) translation using Weblate
Currently translated at 98.9% (276 of 279 strings)

Co-authored-by: ssantos <ssantos@web.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/pt_PT/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -209,4 +209,70 @@
     <string name="failed_to_fetch_full_article_not_html">A ligação não é um documento de HTML</string>
     <string name="failed_to_fetch_full_article_missing_link">O feed não tem ligação ao artigo</string>
     <string name="theme_e_ink">Papel eletrónico</string>
+    <string name="search_verb">Procurar</string>
+    <string name="cancel_search">Cancelar pesquisa</string>
+    <string name="export_saved_articles">Exportar artigos gravados</string>
+    <string name="max_lines">Linhas máximas</string>
+    <string name="saved_adjective">Gravado</string>
+    <string name="show_only_title">Mostrar apenas título</string>
+    <string name="failed_to_download">Falha ao descarregar</string>
+    <string name="failed_to_parse_the_page">Falha ao analisar a página</string>
+    <string name="no_feeds_in_the_page">Sem feeds na página</string>
+    <string name="http_error">Erro HTTP</string>
+    <string name="no_body_in_response">Nenhum corpo na resposta</string>
+    <string name="no_url">Sem URL</string>
+    <string name="one_word">%1$s palavra</string>
+    <string name="two_words">%1$s palavras</string>
+    <string name="few_words">%1$s palavras</string>
+    <string name="many_words">%1$s palavras</string>
+    <string name="two_minutes">%1$s minutos</string>
+    <string name="few_minutes">%1$s minutos</string>
+    <string name="many_minutes">%1$s minutos</string>
+    <string name="other_minutes">%1$s minutos</string>
+    <string name="filter_noun">Filtro</string>
+    <string name="recently_read_adjective">Lido recentemente</string>
+    <string name="content_is_not_html">O conteúdo não é HTML</string>
+    <string name="failed_to_parse_rss_feed">Falha ao analisar o feed RSS</string>
+    <string name="failed_to_parse_json_feed">Falha ao analisar o feed JSON</string>
+    <string name="open_browser_in_split_screen">Abrir o navegador em ecrã dividido</string>
+    <string name="zero_words">%1$s palavras</string>
+    <string name="skip_duplicate_articles">Ignorar artigos duplicados</string>
+    <string name="skip_duplicate_articles_desc">Artigos com ligações ou títulos idênticos aos artigos existentes são ignorados</string>
+    <string name="open_drawer_on_fab">Mostrar feeds depois de marcar tudo como lido</string>
+    <string name="api_key">Chave API</string>
+    <string name="show_message">Mostrar mensagem</string>
+    <string name="text">Texto</string>
+    <string name="font">Fonte</string>
+    <string name="text_preview">Pré-visualização de texto</string>
+    <string name="could_not_remove_font">Não foi possível remover fonte</string>
+    <string name="something_went_wrong">Algo correu mal</string>
+    <string name="read_adjective">Lido</string>
+    <string name="on">Ativada</string>
+    <string name="unsupported_content_type">Tipo de conteúdo não suportado</string>
+    <string name="feed_item_style_compact_card">Cartão compacto</string>
+    <string name="failed_to_export_saved_articles">Falha ao exportar artigos gravados</string>
+    <string name="show_reading_time">Mostrar tempo de leitura estimado</string>
+    <string name="show_title_unread_count">Mostrar contagem de artigos não lidos no título</string>
+    <string name="summarize">Resumir</string>
+    <string name="openai_settings">Integração OpenAI</string>
+    <string name="touch_to_play_audio">Toque para reproduzir áudio</string>
+    <string name="model_id">Id do Modelo</string>
+    <string name="azure_api_version">Versão da API Azure</string>
+    <string name="unable_to_load_models">Incapaz de carregar modelos.</string>
+    <string name="no_models_were_found">Nenhum modelo foi encontrado</string>
+    <string name="list_of_available_models">Lista de modelos disponíveis</string>
+    <string name="system_default">Padrão do sistema</string>
+    <string name="text_settings">Definições de texto</string>
+    <string name="bold">Negrito</string>
+    <string name="italic">Itálico</string>
+    <string name="weight">Peso</string>
+    <string name="article_list_settings">Lista de artigos</string>
+    <string name="failed_to_parse_full_article">Falha ao analisar o artigo completo</string>
+    <string name="add_anyway">Adicionar de qualquer maneira</string>
+    <string name="other_words">%1$s palavras</string>
+    <string name="zero_minutes">%1$s minutos</string>
+    <string name="one_minute">%1$s minuto</string>
+    <string name="close_menu">Fechar menu</string>
+    <string name="off">Desativada</string>
+    <string name="add_font">Adicionar fonte…</string>
 </resources>
