lang: updated Spanish translation using Weblate
Currently translated at 100.0% (282 of 282 strings)

Co-authored-by: Eskuero <3skuero@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -278,4 +278,7 @@
     <string name="something_went_wrong">Algo fue mal</string>
     <string name="text">Texto</string>
     <string name="could_not_add_font">No se pudo añadir la fuente</string>
+    <string name="time_out_placeholder">Tiempo de espera por OpenAI</string>
+    <string name="time_out">Tiempo de espera (segundos)</string>
+    <string name="time_out_validation_error">El tiempo de espera debe ser entre 30 y 600 segundos</string>
 </resources>
