lang: updated German translation using Weblate
Currently translated at 100.0% (282 of 282 strings)

Co-authored-by: VfBFan <drop0815@posteo.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -278,4 +278,7 @@
     <string name="could_not_add_font">Schriftart konnte nicht hinzugefügt werden</string>
     <string name="could_not_remove_font">Schriftart konnte nicht entfernt werden</string>
     <string name="something_went_wrong">Etwas ist schiefgelaufen</string>
+    <string name="time_out_placeholder">Zeitüberschreitung für OpenAI-Anfragen</string>
+    <string name="time_out">Zeitüberschreitung (Sekunden)</string>
+    <string name="time_out_validation_error">Die Zeitüberschreitung muss zwischen 30 und 600 Sekunden liegen</string>
 </resources>
