lang: updated French translation using Weblate
Currently translated at 100.0% (282 of 282 strings)

Co-authored-by: Matth78 <3684177+Matth7878@users.noreply.github.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -278,4 +278,7 @@
     <string name="something_went_wrong">Quelque chose ne s\'est pas bien passé</string>
     <string name="could_not_remove_font">Impossible de supprimer la police</string>
     <string name="text_settings">Affichage du texte</string>
+    <string name="time_out_validation_error">Le timeout doit être compris entre 30 et 600 secondes</string>
+    <string name="time_out_placeholder">Timeout lors des requêtes à OpenAI</string>
+    <string name="time_out">Timeout (secondes)</string>
 </resources>
