lang: updated Hungarian translation using Weblate
Currently translated at 100.0% (282 of 282 strings)

lang: updated Hungarian translation using Weblate

Currently translated at 100.0% (282 of 282 strings)

Co-authored-by: summoner001 <summoner@vivaldi.net>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/hu/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -51,10 +51,10 @@
     <string name="only_on_wifi">Csak Wi-Fi-n</string>
     <string name="show_thumbnails">Bélyegképek megjelenítése</string>
     <string name="may_result_data_charges">Adatforgalmi díjat vonhat maga után.</string>
-    <string name="only_when_charging">Csak töltés alatt</string>
-    <string name="image_loading">Kép betöltése</string>
+    <string name="only_when_charging">Csak töltés közben</string>
+    <string name="image_loading">Képek betöltése</string>
     <string name="no_activity_for_link">Először telepítsen valamit a hivatkozás megnyitásához</string>
-    <string name="on_startup">Alkalmazás indításkor</string>
+    <string name="on_startup">Az alkalmazás megnyitásakor</string>
     <string name="block_list">Tiltólista</string>
     <string name="add_item">Elem hozzáadása</string>
     <string name="show_fab">Lebegő akciógomb megjelenítése</string>
@@ -67,8 +67,8 @@
     <string name="open_in_default_browser">Alapértelmezett böngésző</string>
     <string name="open_in_custom_tab">Egyéni lap</string>
     <string name="use_app_default">Alkalmazás alapbeállításának használata</string>
-    <string name="open_item_by_default_with">Elemek megnyitása alapértelmezetten a következővel</string>
-    <string name="open_links_with">Hivatkozások megnyitása a következővel</string>
+    <string name="open_item_by_default_with">Elemek megnyitása ezzel</string>
+    <string name="open_links_with">Hivatkozások megnyitása ezzel</string>
     <string name="reader_settings">Olvasó</string>
     <string name="open_link_in_web_view">Hivatkozás megnyitása webes nézetben</string>
     <string name="open_in_web_view">Megnyitás webes nézetben</string>
@@ -145,7 +145,7 @@
     <string name="disabled">Letiltva</string>
     <string name="only_from_end">Csak a végéről</string>
     <string name="from_anywhere">Bárhonnan</string>
-    <string name="swipe_to_mark_as_read">Húzza félre az olvasottnak jelöléshez</string>
+    <string name="swipe_to_mark_as_read">Csúsztatás az olvasottnak jelöléshez</string>
     <string name="are_you_sure_leave_sync_chain">Biztosan el akarja hagyni a szinkronizálási láncot?</string>
     <string name="no_barcode_scanner_installed">Nem található vonalkódolvasó</string>
     <string name="permission_read_desc">Engedélyezi az alkalmazás számára, hogy hírfolyamokat és cikkeket olvasson</string>
@@ -160,7 +160,7 @@
     <string name="view_debug_log">Hibakeresési napló megtekintése</string>
     <string name="new_based_on_this">Ehhez hasonló újak</string>
     <string name="all_feeds">Összes hírfolyam</string>
-    <string name="check_for_updates">Új cikkek keresése…</string>
+    <string name="check_for_updates">Új cikkek lekérdezése…</string>
     <string name="sync_status">Szinkronizálás állapota</string>
     <string name="touch_to_play_video">Érintse meg a videó indításhoz</string>
     <string name="open_feed">Hírfolyam megnyitása</string>
@@ -209,7 +209,7 @@
     <string name="saved_article">Cikk elmentve</string>
     <string name="save_article">Cikk mentése</string>
     <string name="theme_e_ink">E-papír</string>
-    <string name="article_list_settings">Cikk-lista</string>
+    <string name="article_list_settings">Cikklista</string>
     <string name="show_only_title">Csak a cím megjelenítése</string>
     <string name="filter_noun">Szűrő</string>
     <string name="recently_read_adjective">Nemrég olvasott</string>
@@ -250,14 +250,14 @@
     <string name="feed_item_style_compact_card">Kompakt kártya</string>
     <string name="touch_to_play_audio">Érintse meg a hang lejátszásához</string>
     <string name="show_title_unread_count">Olvasatlan cikkek számának megjelenítése a címben</string>
-    <string name="api_key">API kulcs</string>
+    <string name="api_key">API-kulcs</string>
     <string name="model_id">Modell-azonosító</string>
-    <string name="azure_api_version">Azure API verzió</string>
+    <string name="azure_api_version">Azure API-verzió</string>
     <string name="no_models_were_found">Nem találhatók modellek</string>
     <string name="azure_deployment_id">Azure üzembe helyezési azonosító</string>
     <string name="list_of_available_models">Elérhető modellek listája</string>
     <string name="summarize">Összefoglalás</string>
-    <string name="openai_settings">OpenAI integráció</string>
+    <string name="openai_settings">OpenAI-integráció</string>
     <string name="unable_to_load_models">Nem lehet betölteni a modelleket.</string>
     <string name="show_message">Üzenet megjelenítése</string>
     <string name="open_drawer_on_fab">A hírfolyam megjelenítése miután az összes cikk meg lett jelölve olvasottként</string>
