--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -15,20 +15,20 @@
     <string name="open_in_browser">Atvērt pārlūkā</string>
     <string name="open_enclosed_media_file">Atvērt %1$s</string>
     <string name="set_language">Iestatīt valodu</string>
-    <string name="sync">Sinhronizēt</string>
+    <string name="sync">Atsvaidzināt</string>
     <string name="export_saved_articles">Izgūt atzīmētos rakstus</string>
     <string name="title_activity_settings">Iestatījumi</string>
     <string name="share">Dalīties</string>
     <string name="sync_option_every_15min">Ik pēc 15 minūtēm</string>
     <string name="sync_option_every_30min">Ik pēc 30 minūtēm</string>
-    <string name="synchronization">Sinhronizācija</string>
-    <string name="syncing">Sinhronizē</string>
+    <string name="synchronization">Atsvaidzināšana</string>
+    <string name="syncing">Atsvaidzina</string>
     <string name="sync_option_every_day">Katru dienu</string>
     <string name="sync_option_every_hour">Ik stundu</string>
     <string name="sync_option_every_3_hours">Ik pēc 3 stundām</string>
     <string name="sync_option_every_6_hours">Ik pēc 6 stundām</string>
     <string name="sync_option_every_12_hours">Ik pēc 12 stundām</string>
-    <string name="sync_status">Sinhronizācijas statuss</string>
+    <string name="sync_status">Atsvaidzināšanas statuss</string>
     <string name="open_in_reader">Lietotnē</string>
     <string name="use_app_default">Lietot noklusēto</string>
     <string name="open_link_in_web_view">Atvērt saiti WebView</string>
@@ -49,23 +49,23 @@
     <string name="open_feed">Atvērt ziņu plūsmu</string>
     <string name="contracted_tag">Aizvērta birka</string>
     <string name="expanded_tag">Atvērta birka</string>
-    <string name="sync_to_fetch">Sinhronizēt, lai iegūtu rakstu</string>
-    <string name="synchronize_feeds">Sinhronizēt ziņu plūsmas</string>
+    <string name="sync_to_fetch">Atsvaidzināt, lai iegūtu rakstu</string>
+    <string name="synchronize_feeds">Atsvaidzināt ziņu plūsmas</string>
     <string name="two_unread_articles">%1$s nelasīti raksti</string>
     <string name="few_unread_articles">%1$s nelasīti raksti</string>
     <string name="many_unread_articles">%1$s nelasīti raksti</string>
     <string name="other_unread_articles">%1$s nelasīti raksti</string>
     <string name="device_sync">Ierīces sinhronizācija</string>
-    <string name="device_sync_financed_by_community">Par šo pakalpojumu maksā kopiena. Lūdzu, ziedojiet, ja uzskatāt, ka šī funkcija ir noderīga - jūs vairs nevarat dzīvot bez tās.</string>
+    <string name="device_sync_financed_by_community">Šo pakalpojumu apmaksā kopiena. Lūdzu, ziedojiet, ja uzskatāt, ka šī funkcija ir noderīga - jūs vairs nevarat dzīvot bez tās.</string>
     <string name="add_new_device">Pievienot jaunu ierīci</string>
     <string name="this_device">%1$s (šī ierīce)</string>
-    <string name="devices_on_sync_chain">Ierīces sinhronizācijas ķēdē</string>
+    <string name="devices_on_sync_chain">Ierīces sinhronizācijas grupā</string>
     <string name="remove_device">Noņemt ierīci</string>
     <string name="remove_device_question">Vai tiešām vēlaties dzēst %1$s ierīci?</string>
     <string name="or_open_device_sync_link">Vai arī, variet atvērt saiti.</string>
     <string name="qr_code">QR kods</string>
     <string name="sync_code">Sinhronizācijas kods</string>
-    <string name="device_sync_description_2">Vienkārši skenējiet sinhronizācijas kodu, kas izveidots uz citas ierīces, vai izveidojiet jaunu sinhronizācijas ķēdi (grupu).</string>
+    <string name="device_sync_description_2">Vienkārši skenējiet sinhronizācijas kodu, kas izveidots uz citas ierīces, vai izveidojiet jaunu sinhronizācijas grupu.</string>
     <string name="device_sync_description_1">Ierīces sinhronizācija ļauj sinhronizēt ziņu plūsmas abonementus un lasītos rakstus starp dažādām ierīcēm.</string>
     <string name="save_article">Pievienot atzīmētiem</string>
     <string name="saved_adjective">Atzīmētie</string>
@@ -172,4 +172,69 @@
     <string name="text_preview">Teksta priekšskatījums</string>
     <string name="could_not_add_font">Nevarēja pievienot fontu</string>
     <string name="bold">Treknraksts</string>
+    <string name="only_on_wifi">Tikai, kad izmanto Wi-Fi</string>
+    <string name="show_thumbnails">Rādīt sīktēlus</string>
+    <string name="description_for_read_aloud">Automātiski atpazīst raksta valodu</string>
+    <string name="may_result_data_charges">Var tikt piemērota maksa par mobilajiem datiem.</string>
+    <string name="only_when_charging">Tikai, kad uzlādē ierīci</string>
+    <string name="image_loading">Attēlu ielāde</string>
+    <string name="on_startup">Kad atver lietotni</string>
+    <string name="block_list">Melnais saraksts</string>
+    <string name="go_back">Atpakaļ</string>
+    <string name="fetch_full_article">Ielādēt visu, pilnu, rakstu</string>
+    <string name="failed_to_fetch_full_article">Nevarēja ielādēt visu, pilnu, rakstu</string>
+    <string name="failed_to_open_article">Nevarēja atvērt rakstu</string>
+    <string name="fetching_full_article">Ielādē visu, pilnu, rakstu…</string>
+    <string name="showing_only_unread_articles">Rāda tikai nelasītos rakstus</string>
+    <string name="open_menu">Atvērt izvēlni</string>
+    <string name="unread_adjective">Nelasīts</string>
+    <string name="already_read">Jau lasīts</string>
+    <string name="showing_all_articles">Rāda visus rakstus</string>
+    <string name="zero_unread_articles">%1$s nelasītu rakstu</string>
+    <string name="one_unread_article">%1$s nelasīts raksts</string>
+    <string name="invalid_url">Nederīga URL adrese</string>
+    <string name="disconnect_device_from_sync">Atvienot ierīci no sinhronizācijas</string>
+    <string name="leave_sync_chain">Pamest sinhronizācijas grupu</string>
+    <string name="scan_or_enter_code">Skenējiet vai ievadiet sinhronizācijas kodu</string>
+    <string name="start_new_sync_chain">Izveidot jaunu sinhronizācijas grupu</string>
+    <string name="join_sync_chain">Pievienoties sinhronizācijas grupai</string>
+    <string name="are_you_sure_leave_sync_chain">Vai tiešām vēlaties pamest sinhronizācijas grupu?</string>
+    <string name="failed_to_fetch_full_article_missing_link">Ziņu plūsmai trūkst saites uz rakstu</string>
+    <string name="failed_to_fetch_full_article_not_html">Raksta saite nav HTML dokuments</string>
+    <string name="max_lines">Maksimālais rindu skaits</string>
+    <string name="failed_to_fetch_full_article_missing_body">Nav ko ielādēt</string>
+    <string name="failed_to_parse_the_page">Neizdevās parsēt lapu</string>
+    <string name="no_feeds_in_the_page">Lapā nav ziņu plūsmu</string>
+    <string name="failed_to_parse_full_article">Neizdevās parsēt visu, pilno, rakstu</string>
+    <string name="skip_duplicate_articles_desc">Raksti ar saitēm vai nosaukumiem, kas ir identiski esošajiem rakstiem, tiek ignorēti</string>
+    <string name="failed_to_parse">Nevarēja parsēt %1$s</string>
+    <string name="new_based_on_this">Jauns, pamatojoties uz šo</string>
+    <string name="use_detect_language">Atpazīt valodu</string>
+    <string name="only_available_on_android_n">Pieejams tikai Android %1$s un jaunākās versijās</string>
+    <string name="no_activity_for_link">Vispirms uzstādiet kaut ko, kas ļaus jums atvērt šo saiti</string>
+    <string name="fetch_full_articles_by_default">Pēc noklusējuma ielādēt pilnus rakstus</string>
+    <string name="no_body_in_response">Atbilde nesatur pamattekstu</string>
+    <string name="mark_as_read_on_scroll">Atzīmēt rakstu kā lasītu, to ritinot</string>
+    <string name="no_url">Nav URL adreses</string>
+    <string name="failed_to_download">Neizdevās lejupielādēt</string>
+    <string name="open_browser_in_split_screen">Atvērt pārlūku dalītā ekrānā</string>
+    <string name="time_out">Noildze (sekundes)</string>
+    <string name="time_out_validation_error">Noildzei jābūt no 30 līdz 600 sekundēm</string>
+    <string name="time_out_placeholder">OpenAI pieprasījumu noildze</string>
+    <string name="failed_to_parse_rss_feed">Neizdevās parsēt RSS ziņu plūsmu</string>
+    <string name="failed_to_parse_json_feed">Neizdevās parsēt JSON ziņu plūsmu</string>
+    <string name="add_item">Pievienot ierakstu</string>
+    <string name="updated_feeds">Atjauninātas ziņu plūsmas</string>
+    <string name="open_in_default_browser">Noklusējuma pārlūkā</string>
+    <string name="open_item_by_default_with">Pēc noklusējuma atvērt rakstus ar</string>
+    <string name="open_links_with">Atvērt saites ar</string>
+    <string name="no_email_client">Nevarēja atvērt e-pasta klientu</string>
+    <string name="mark_items_below_as_read">Atzīmēt zemāk minētos rakstus kā lasītus</string>
+    <string name="battery_optimization">Akumulatora optimizācija</string>
+    <string name="battery_optimization_disabled">Izslēgta</string>
+    <string name="battery_optimization_enabled">Ieslēgta</string>
+    <string name="no_feeds">Nav nevienas ziņu plūsmas</string>
+    <string name="model_id">Modeļa ID</string>
+    <string name="unable_to_load_models">Nevar ielādēt modeļus.</string>
+    <string name="mark_items_above_as_read">Atzīmēt augstāk minētos rakstus kā lasītus</string>
 </resources>
