--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="theme_e_ink">E-papier</string>
+    <string name="navigation_drawer_open">Otvoriť bočný panel</string>
+    <string name="navigation_drawer_close">Zavrieť navigačný panel</string>
+    <string name="action_settings">Nastavenia</string>
+    <string name="add_feed">Pridať kanál</string>
+    <string name="title_activity_edit_feed">Odobrať kanál</string>
+    <string name="url">URL</string>
+    <string name="tag">Štítok</string>
+    <string name="add_feed_search_hint">URL kanálu</string>
+    <string name="title">Názov</string>
+    <string name="nostr_feed_description">Nostr články od %1$s</string>
+    <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
+    <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
+    <string name="save">Uložiť</string>
 </resources>
