lang: updated Portuguese (Portugal) translation using Weblate
Currently translated at 99.2% (280 of 282 strings)

Co-authored-by: ssantos <ssantos@web.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/pt_PT/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -275,4 +275,9 @@
     <string name="close_menu">Fechar menu</string>
     <string name="off">Desativada</string>
     <string name="add_font">Adicionar fonte…</string>
+    <string name="nostr_feed_description">Artigos Nostr por %1$s</string>
+    <string name="time_out_validation_error">O tempo limite deve ser entre 30 e 600 segundos</string>
+    <string name="time_out">Tempo limite (segundos)</string>
+    <string name="time_out_placeholder">Tempo limite para requerimentos do OpenAI</string>
+    <string name="azure_deployment_id">Id de implantação do Azure</string>
 </resources>
